.jjconflict-side-1/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__alternative_patterns_guard.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [x] | [_, x] if x == 1 -> x\n    _ -> 0\n  }\n}   \n"
---
let
  inherit (builtins.import ./../gleam.nix) listHasLength;
  
  main =
    xs:
    if listHasLength xs 1 && (xs.head == 1) then let x = xs.head; in x
    else if listHasLength xs 2 && (xs.tail.head == 1) then
      let
        x = xs.tail.head;
      in
      x
    else 0;
in
{ inherit main; }
