.jjconflict-side-1/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__field_access.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "\n        pub type Person {\n          Person(username: String, name: String, age: Int)\n        }\n        \n        pub fn main() {\n          let given_name = \"jack\"\n          let raiden = Person(\"raiden\", \"jack\", 31)\n          \n          case given_name {\n            name if name == raiden.name -> \"It's jack\"\n            _ -> \"It's not jack\"\n          }\n        }\n        "
---
let
  Person =
    username: name: age: { __gleamTag = "Person"; inherit username name age; };
  
  main =
    { }:
    let
      given_name = "jack";
      raiden = Person "raiden" "jack" 31;
    in
    if given_name == raiden.name then let name = given_name; in "It's jack"
    else "It's not jack";
in
{ inherit Person main; }
